--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -15,15 +15,15 @@
   <div class="footer__container-links">
     <div class="footer__margin-link">
       <img class="footer_logo-links" src="./components/footer/casa (1).png" alt="logo-home">
-      <a class="footer_redirect-link" href="../../index.html">Home</a>
+      <a class="footer_redirect-link" href="index.html">Home</a>
     </div>
     <div class="footer__margin-link">
     <img class="footer_logo-links" src="./components/footer/llamada.png" alt="logo-servicios">
-    <a class="footer_redirect-link" href="../../servicios.html">Servicios</a> 
+    <a class="footer_redirect-link" href="servicios.html">Servicios</a> 
     </div>
     <div class="footer__margin-link">
     <img class="footer_logo-links" src="./components/footer/usuario.png" alt="logo-contacto">
-    <a class="footer_redirect-link" href="../../contacto.html">Contacto</a>
+    <a class="footer_redirect-link" href="contacto.html">Contacto</a>
     </div>
   </div>
   <div class="footer__container-socialnets">
