--- a/components/header/header.html
+++ b/components/header/header.html
@@ -15,9 +15,9 @@
     </button>
     <nav class="header__links-nav">
       <button class="close-menu" aria-label="Cerrar menú">&times;</button> <!-- Botón de cierre -->
-      <a class="header__link" href="../../contacto.html">Contacto</a>
-      <a class="header__link" href="../../portfolio.html">Portfolio</a>
-      <a class="header__link" href="../../servicios.html">Servicios</a>
+      <a class="header__link" href="contacto.html">Contacto</a>
+      <a class="header__link" href="portfolio.html">Portfolio</a>
+      <a class="header__link" href="servicios.html">Servicios</a>
     </nav>
   </header>  
 </body>
